// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar component should match snapshot when in desktop view and SideBar is closed 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-11"
>
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-13 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
  >
    <div
      class="makeStyles-root-14"
    >
      <div
        class="makeStyles-root-15"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-16"
        >
          <a
            aria-current="page"
            class="makeStyles-link-18 makeStyles-active-19"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-17 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-20"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-18"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-17 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-20"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar component should match snapshot when in desktop view and SideBar is opened 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1"
>
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-3 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
  >
    <div
      class="makeStyles-root-4"
    >
      <div
        class="makeStyles-root-5"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-6"
        >
          <a
            aria-current="page"
            class="makeStyles-link-8 makeStyles-active-9"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-7 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-10"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-8"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-7 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-10"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar component should match snapshot when in mobile view and SideBar is closed 1`] = `
<body
  style=""
>
  <div />
  <div
    aria-hidden="true"
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-31"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-33 MuiDrawer-paperAnchorLeft MuiPaper-elevation2"
      style="visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
      tabindex="-1"
    >
      <div
        class="makeStyles-drawerHeader-32"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-root-34"
      >
        <div
          class="makeStyles-root-35"
        >
          <div
            class="MuiTypography-root MuiTypography-button"
          >
            general
          </div>
          <div
            class="makeStyles-content-36"
          >
            <a
              aria-current="page"
              class="makeStyles-link-38 makeStyles-active-39"
              href="/"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-37 MuiButton-fullWidth"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-iconRoot-40"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </span>
                  dashboard
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </a>
            <a
              class="makeStyles-link-38"
              href="/reports"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-37 MuiButton-fullWidth"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-iconRoot-40"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                      />
                    </svg>
                  </span>
                  reports
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`SideBar component should match snapshot when in mobile view and SideBar is opened 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-21"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-23 MuiDrawer-paperAnchorLeft MuiPaper-elevation2"
      tabindex="-1"
    >
      <div
        class="makeStyles-drawerHeader-22"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-root-24"
      >
        <div
          class="makeStyles-root-25"
        >
          <div
            class="MuiTypography-root MuiTypography-button"
          >
            general
          </div>
          <div
            class="makeStyles-content-26"
          >
            <a
              aria-current="page"
              class="makeStyles-link-28 makeStyles-active-29"
              href="/"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-27 MuiButton-fullWidth"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-iconRoot-30"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </span>
                  dashboard
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </a>
            <a
              class="makeStyles-link-28"
              href="/reports"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-27 MuiButton-fullWidth"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-iconRoot-30"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                      />
                    </svg>
                  </span>
                  reports
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
